--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ button {
   </div>
 
   <section class="memory" id="memory">
-    <img src="photo1.jpg" class="photo p1">
+    <img src="photo1.png" class="photo p1">
     <img src="photo2.jpg" class="photo p2">
 
     <div class="heart3d" id="heart">❤️</div>
@@ -244,3 +244,4 @@ noBtn.onclick = e => e.preventDefault();
 
 </body>
 </html>
+
