--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@ button {
 
 .photo {
   position: absolute;
-  width: 120px;
-  height: 160px;
+  width: 170px;
+  height: 230px;
   object-fit: cover;
-  border-radius: 16px;
-  box-shadow: 0 18px 40px rgba(0,0,0,.25);
+  border-radius: 20px;
+  box-shadow: 0 22px 50px rgba(0,0,0,.28);
   opacity: 0;
   filter: blur(10px);
   transition: all 1.5s ease;
@@ -171,7 +171,7 @@ button {
   </div>
 
   <audio id="music" loop>
-    <source src="pehli-bhi-main.mp3" type="audio/mpeg">
+    <source src="melt.mp3" type="audio/mpeg">
   </audio>
 </main>
 
@@ -291,4 +291,5 @@ yesBtn.onclick = () => {
 
 </body>
 </html>
+
 
