--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ button {
 /* MEMORY */
 .memory {
   position: relative;
-  height: 420px;
+  height: 460px;
   display: none;
   margin-top: 20px;
 }
@@ -95,20 +95,21 @@ button {
   transition: all 1.5s ease;
 }
 
-.p1 { left: 18%; top: 120px; }
-.p2 { right: 18%; top: 120px; }
-.p3 { left: 8%; top: 30px; }
-.p4 { left: 42%; top: 0; }
-.p5 { right: 8%; top: 30px; }
+.p1 { left: 14%; top: 130px; }
+.p2 { right: 14%; top: 130px; }
+.p3 { left: 4%; top: 20px; }
+.p4 { left: 40%; top: -10px; }
+.p5 { right: 4%; top: 20px; }
+
 
 /* 3D HEART */
 .heart3d {
   position: absolute;
   left: 50%;
-  top: 130px;
-  transform: translateX(-50%) scale(0);
-  font-size: 130px;
-  filter: drop-shadow(0 0 40px #ff4d7d);
+  top: 160px;
+  transform: translate(-50%, -50%) scale(0);
+  font-size: 200px;
+  filter: drop-shadow(0 0 60px #ff4d7d);
   animation: beat 1.2s infinite;
   opacity: 0;
   transition: all 1s ease;
@@ -291,5 +292,6 @@ yesBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
