--- a/index.html
+++ b/index.html
@@ -78,17 +78,18 @@ button {
 /* MEMORY */
 .memory {
   position: relative;
-  height: 460px;
+  height: clamp(340px, 75vw, 460px);
   display: none;
   margin-top: 20px;
 }
 
+
 .photo {
   position: absolute;
-  width: 170px;
-  height: 230px;
+  width: clamp(110px, 22vw, 170px);
+  height: clamp(150px, 30vw, 230px);
   object-fit: cover;
-  border-radius: 20px;
+  border-radius: clamp(14px, 3vw, 20px);
   box-shadow: 0 22px 50px rgba(0,0,0,.28);
   opacity: 0;
   filter: blur(10px);
@@ -106,14 +107,15 @@ button {
 .heart3d {
   position: absolute;
   left: 50%;
-  top: 160px;
+  top: clamp(130px, 28vw, 160px);
   transform: translate(-50%, -50%) scale(0);
-  font-size: 200px;
+  font-size: clamp(130px, 30vw, 200px);
   filter: drop-shadow(0 0 60px #ff4d7d);
   animation: beat 1.2s infinite;
   opacity: 0;
   transition: all 1s ease;
 }
+
 
 @keyframes beat {
   0%,100% { transform: translateX(-50%) scale(1); }
@@ -136,39 +138,7 @@ button {
   animation: floatUp 6s linear forwards;
 }
 
-  /* ---------- MOBILE FIX ---------- */
-@media (max-width: 600px) {
-
-  .memory {
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 14px;
-    padding-top: 40px;
-  }
-
-  .photo {
-    position: relative;
-    width: 140px;
-    height: 190px;
-    left: auto !important;
-    right: auto !important;
-    top: auto !important;
-    transform: none !important;
-  }
-
-  .heart3d {
-    position: relative;
-    top: auto;
-    left: auto;
-    transform: scale(1);
-    order: -1; /* heart shows first */
-    font-size: 150px;
-    margin-bottom: 10px;
-  }
-}
+  
 @keyframes floatUp {
   from { transform: translateY(100vh); opacity: 1; }
   to { transform: translateY(-10vh); opacity: 0; }
@@ -325,6 +295,7 @@ yesBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
